--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Deploy to Linux Server via SSH Password
 on:
   push:
     branches: [ "main" ]  # deploy on push to main branch
-
+  workflow_dispatch:
 jobs:
   deploy:
     runs-on: ubuntu-latest
